--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="w-50 min-vh-100 mx-auto">king</div>
+    <div class="topContainer bg-image">
+      <div class="w-50 min-vh-100 mx-auto">
+        <section class="firstSection"></section>
+      </div>
+    </div>
+    <div class="midContainer bg-image">
+      <div class="w-50 min-vh-100 mx-auto">
+        <section class="firstSection"></section>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
